Fixed potential ClassCastException found by findbugs in getDouble.